--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ h3{
 .center{
     text-align: center;
 }
+.mini{
+    font-size: 0.7em;
+    opacity:0.7;
+    padding:2em;
+}
 body {
     font-family: 'Poppins', sans-serif;
     color:#444;
@@ -66,6 +71,7 @@ button{
     border-radius: 0.3em;;
     transition: 0.3s ease;
     cursor: pointer;
+    margin: 2em 0;
 }
 button:hover{
     background-color: white;
@@ -100,6 +106,7 @@ header nav a:hover {
 }
 
 .title{
+    text-align: center;
     font-size: 3em;
     font-weight:700;
 
@@ -113,8 +120,9 @@ header nav a:hover {
 }
 #cart-count{
     position: absolute;
-    top: -0.7em;
-    right: -0.7em;
+    padding:0.3em;
+    top: -1em;
+    right: -1em;
     background-color: #444;
     color: white;
     border-radius: 50%;
@@ -123,7 +131,7 @@ header nav a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 0.3em;
+    font-size: 0.7em;
     font-weight: bold;
 }
 
@@ -167,13 +175,14 @@ header nav a:hover {
 .menu {
     margin:2em;
     text-align: center;
-    font-size: 2.5em;
+    font-size: 1.7em;
 }
 .product-grid {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    gap:2em;
 }
 
 .product {
@@ -206,6 +215,7 @@ header nav a:hover {
 
 .flavor, .pearl, .kit{
     border: 0.1em dotted #ccc;
+    padding: 1em;
 }
 /* .kit > div:not(:first-child){
     display: inline-block;
@@ -377,7 +387,7 @@ h6{
     margin-bottom:2em;
 }
 .form-address input, .form-contact input{
-    width: 47%;
+    width: 45%;
 }
 .form-address input[name="address-street"]{
     width:100%;
@@ -400,6 +410,7 @@ h6{
     justify-content: space-between;
     flex-wrap: wrap;
     flex :1 1;
+    gap: 2em;
 }
 .order-form input{
 
@@ -444,6 +455,9 @@ select:focus{
     border-color: orange;
     outline:none;
 }
+
+
+
 
 
 
@@ -514,9 +528,7 @@ textarea{
     animation: rotate 2s ease-in-out infinite;
 }
 
-.show {
-    display: block;
-}
+
 @keyframes rotate {
     0% {
         transform: rotate(0deg);
@@ -532,9 +544,14 @@ textarea{
     }
 }
 
+
+.show {
+    display: block;
+}
+
 @media screen and (max-width: 800px) {
     .title{
-        font-size: 2em;
+        font-size: 1.7em;
     }
     .dropdown-content{
         width: 100%;
@@ -546,6 +563,9 @@ textarea{
     }
     .box{
         flex-direction: column;
+    }
+    .order-form .flex{
+        gap:0;
     }
     .cart-container, .checkout-container{
         width:100%;
