--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,9 @@ header nav a:hover {
     font-weight:700;
 
 }
+.title a{
+    color: #444;
+}
 .cart-icon {
     position: relative;
     display: inline-block;
@@ -217,10 +220,9 @@ header nav a:hover {
     border: 0.1em dotted #ccc;
     padding: 1em;
 }
-/* .kit > div:not(:first-child){
-    display: inline-block;
-    margin-left: 1em;
-} */
+.kit{
+    display:none;
+}
 
 .choose-flav{
     display:none;
@@ -362,11 +364,17 @@ h6{
     font-size: 0.7em;
     /* float:right; */
 }
+.full{
+    padding: 2em;
+    font-size:0.7em;
+    font-weight:300;
+    text-align: center;
+    display:none;
+}
 
 
 .order-form p{
     margin-top:1.5em;
-
     font-weight: 700;
 }
 .order-form .confirm-submit{
@@ -387,6 +395,7 @@ h6{
     margin-bottom:2em;
 }
 .form-address input, .form-contact input{
+    margin: 0.5em 0;
     width: 45%;
 }
 .form-address input[name="address-street"]{
@@ -410,7 +419,7 @@ h6{
     justify-content: space-between;
     flex-wrap: wrap;
     flex :1 1;
-    gap: 2em;
+    /* gap: 2em; */
 }
 .order-form input{
 
@@ -489,6 +498,7 @@ textarea{
     color:white;
     box-sizing: border-box;
     transition: 0.3s;
+    margin:0;
     
 }
 .cancel:hover{
