--- a/s-style.css
+++ b/s-style.css
@@ -62,3 +62,9 @@ main{
     border-bottom: 0.1em solid white;
 }
 
+@media screen and (max-width: 800px) {
+    main{
+        padding:0;
+    }
+}
+
