--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* styles.css */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;1,400&display=swap');
 
 
 
@@ -279,8 +279,8 @@ body {
     position: absolute;
     top:0;
     right: 2em;
-    height: 10vw;
-    width:10vw;
+    height: 9em;
+    width:9em;
     object-fit: cover;
 }
 
